opam-version: "2.0"
maintainer: "Ghiles Ziat <ghiles.ziat@isae-supaero.fr>"
authors: [
  "Ghiles Ziat <ghiles.ziat@isae-supaero.fr>"
]
homepage: "https://github.com/ghilesZ/testify"
bug-reports: "https://github.com/ghilesZ/testify/issues"
dev-repo: "git+https://github.com/ghilesZ/testify"

build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name] {with-test}
]
depends: [
  "ocaml" {>= "4.11"}
  "ppx_tools_versioned"
  "ocaml-migrate-parsetree"
  "qcheck" {>= "0.17"}
  "zarith"
  "dune" {>= "1.2"}
  "apronext"
  "picasso"
]
synopsis:"Ppx_testify syntax extension"
description:"Ppx_testify is a syntax-extension that allows to generate automatically test for your programs with a minimum effort from your end."
url {
  src: "https://github.com/ghilesZ/testify/archive/1.0.tar.gz"
}
