(executable
  (name positive)
  (modules positive)
  (preprocess (pps ppx_testify))
  (libraries qcheck))
  
(executable
  (name itv)
  (modules itv)
  (preprocess (pps ppx_testify))
  (libraries qcheck zarith))

(executable
  (name itv_record)
  (modules itv_record)
  (preprocess (pps ppx_testify))
  (libraries qcheck zarith))