(executable
  (name positive)
  (modules positive)
  (preprocess (pps ppx_testify))
  (libraries testify_runtime qcheck))
  
(executable
  (name itv)
  (modules itv)
  (preprocess (pps ppx_testify))
  (libraries testify_runtime qcheck))
  
(executable
  (name itv_record)
  (modules itv_record)
  (preprocess (pps ppx_testify))
  (libraries testify_runtime qcheck))

(executable
  (name circle)
  (modules circle)
  (preprocess (pps ppx_testify))
  (libraries testify_runtime  qcheck))

(executable
  (name q)
  (modules q)
  (preprocess (pps ppx_testify))
  (libraries zarith testify_runtime qcheck))