(include_subdirs unqualified)

(library
  (public_name ppx_testify)
  (name ppx_testify)
  (wrapped false)
  (kind ppx_rewriter)
  (modules helper tools boxgen lang consistency interpreter reconstruct ppx_testify satisfying such_that)
  (libraries ppx_tools_versioned
             ocaml-migrate-parsetree
             apron apron.boxMPQ apron.polkaMPQ apronext))
             
(library
  (name testify_runtime)
  (modules testify_runtime)
  (libraries qcheck))
