(include_subdirs unqualified)

(library
  (public_name ppx_testify)
  (name ppx_testify)
  (wrapped false)
  (kind ppx_rewriter)
  (ppx_runtime_libraries testify_runtime)
  (inline_tests.backend
    (runner_libraries testify_runtime))
  (library_flags :standard -linkall)
  (libraries
     zarith
     ppx_tools_versioned
     ocaml-migrate-parsetree
     apron apron.boxMPQ apron.polkaMPQ apronext
     picasso)
)             
