opam-version: "2.0"
maintainer: "Ghiles Ziat <ghiles.ziat@lip6.fr>"
authors: [
  "Ghiles Ziat <ghiles.ziat@lip6.fr>"
]
homepage: "https://github.com/ghilesZ/testify"
bug-reports: "https://github.com/ghilesZ/testify/issues"
dev-repo: "git+https://github.com/ghilesZ/testify"

build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name] {with-test}
]
depends: [
  "ocaml" {>= "4.04.0"}
  "ppx_tools_versioned"
  "dune" {>= "1.2"}
]
synopsis:"Ppx_testify syntax extension"
description:"Wideopen is a syntax-extension that allows you to
  annotate ..."
url {
  src: "https://github.com/ghilesZ/testify/archive/1.0.tar.gz"
}
