(library
 (name        interval_intel)
 (foreign_stubs (language c) (names interval_stubs))
 (preprocess (pps ppx_testify -- -nb %{env:NB=1000}))
 (inline_tests (backend ppx_testify))
 (libraries interval_base))
 
(rule
 (targets interval_intel.h)
 (deps    ../src-base/interval_intel.h)
 (action  (copy %{deps} %{targets})))
